stopJumpingDate!!! =)

--- a/src/assets/styles_app.css
+++ b/src/assets/styles_app.css
@@ -80,7 +80,7 @@ p.capital {
     flex-wrap: wrap;
     justify-content: space-between;
     text-align: center;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     margin: top 25px;
     min-height: 100vh;
